# climbing_ws

./: .gitignore  FUNCTIONAL_TEST_EXECUTION_SHEET.md  analyze_body_vx.py  analyze_crawl.py  analyze_crawl2.py  analyze_crawl3.py  analyze_crawl_deep.py  analyze_crawl_gait.py
.calibration_backups/: robot.yaml.20260414_094023.bak  robot.yaml.20260415_220708.bak
quadruped_robot/: F427Hx_HAL.ioc
quadruped_robot/MDK-ARM/: F427Hx_HAL.uvguix.ZhuanZ（无密码）  F427Hx_HAL.uvguix.cc  F427Hx_HAL.uvguix.jiangyangxin  F427Hx_HAL.uvoptx  F427Hx_HAL.uvprojx  startup_stm32f427xx.lst
src/: CMakeLists.txt
src/climbing-robot-testing/: README.md
src/climbing_bringup/: CMakeLists.txt  package.xml
src/climbing_bringup/launch/: jetson_bringup.launch  jetson_calibrate_home.launch  jetson_static_bringup.launch  pc_bringup.launch  pc_static_bringup.launch  replay_bringup.launch  test_crawl_gait.launch
src/climbing_control_core/: CMakeLists.txt  package.xml
src/climbing_control_core/scripts/: actual_tracking.py  body_planner.py  mission_supervisor.py  stance_force_optimizer.py  state_logger.py  swing_leg_controller.py  test_actual_tracking_unit.py  test_crawl_gait.py  test_crawl_gait_with_fan.py  test_fan_cycle.py  test_fan_individual.py  test_single_leg_swing.py  test_swing_admittance.py  test_workspace_guard_unit.py  workspace_guard.py
src/climbing_description/: CMakeLists.txt  package.xml
src/climbing_description/config/: robot.yaml
src/climbing_hw_bridge/: CMakeLists.txt  package.xml
src/climbing_hw_bridge/scripts/: dynamixel_bridge.py  fan_serial_bridge.py  imu_serial_bridge.py  leg_ik_executor.py  local_safety_supervisor.py  read_dxl_control_table.py  test_dxl_position_step.py  test_dxl_tuning_unit.py  tune_dxl_position.py
src/climbing_msgs/: CMakeLists.txt  package.xml
src/climbing_msgs/msg/: AdhesionCommand.msg  BodyReference.msg  EstimatedState.msg  LegCenterCommand.msg  StanceWrenchCommand.msg  SwingLegDebug.msg
src/climbing_msgs/srv/: CaptureHome.srv  SetFanSpeed.srv
src/climbing_state_estimator/: CMakeLists.txt  package.xml
src/climbing_state_estimator/scripts/: mocap_bridge.py  state_estimator.py
src/dynamixel_control/: CMakeLists.txt  package.xml
test_logs/: analyze_crawl_gait.py  crawl_gait_20260426_165637.csv  crawl_gait_20260427_114547.csv  crawl_gait_20260427_142956.csv  crawl_gait_20260428_103934.csv  crawl_gait_20260428_203318.csv  crawl_gait_20260428_212103.csv  crawl_gait_20260429_150018.csv  crawl_gait_20260429_153539.csv  crawl_gait_20260429_164359.csv  crawl_gait_20260429_202637.csv  crawl_gait_20260429_202915.csv  crawl_gait_20260429_212441.csv  crawl_gait_20260430_152552.csv  crawl_gait_20260507_143947.csv  crawl_gait_20260507_171325.csv  crawl_gait_20260507_224639.csv  crawl_gait_20260508_153532.csv  crawl_gait_20260508_171512.csv  crawl_gait_20260528_213937.csv  crawl_gait_20260528_214202.csv  crawl_gait_with_fan_20260521_100905.csv  crawl_gait_with_fan_20260521_102524.csv  crawl_gait_with_fan_20260521_104638.csv  crawl_gait_with_fan_20260521_160651.csv  crawl_gait_with_fan_20260521_161814.csv  crawl_gait_with_fan_20260521_162639.csv  crawl_gait_with_fan_20260521_165003.csv  crawl_gait_with_fan_20260521_171656.csv  crawl_gait_with_fan_20260521_173402.csv  crawl_gait_with_fan_20260521_174257.csv  crawl_gait_with_fan_20260521_211444.csv  crawl_gait_with_fan_20260521_230650.csv  crawl_gait_with_fan_20260525_195720.csv  crawl_gait_with_fan_20260526_192516.csv  crawl_gait_with_fan_20260623_112639.csv  crawl_gait_with_fan_20260623_200737.csv  dxl_control_table_20260616_164334.csv  dxl_control_table_20260616_210637.csv  dxl_position_step_20260616_162126.csv  (+43 more)
test_logs/dxl_autotune_20260623_170928/: dxl_tuning_candidate.yaml  session.json
test_logs/dxl_autotune_20260623_205151/: session.json
test_logs/dxl_autotune_20260623_205243/: session.json
tools/: calibrate_motor_home_ticks.sh  plot_swing_leg_state_machine_log.py  read_dxl_control_table.sh  run_swing_leg_state_machine_test.sh  test_crawl_gait.sh  test_crawl_gait_with_fan.sh  test_dxl_position_step.sh  test_fan_cycle.sh  test_fan_individual.sh  test_right_rear_leg.sh  test_right_rear_leg_adhesion.sh  test_single_leg.sh  test_single_leg_adhesion.sh  test_swing_admittance.sh  test_swing_leg_state_machine.py  tune_dxl_position.sh  validate_leg_kinematics.py
(+308 files in other folders)
