<?xml version="1.0"?>
<package format="2">
  <name>climbing_control_core</name>
  <version>0.0.1</version>
  <description>PC-side planning and control nodes for the climbing quadruped.</description>

  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>climbing_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
</package>