cmake_minimum_required(VERSION 3.0.2)
project(climbing_msgs)

find_package(catkin REQUIRED COMPONENTS
  geometry_msgs
  message_generation
  sensor_msgs
  std_msgs
)

add_message_files(
  FILES
  AdhesionCommand.msg
  BodyReference.msg
  EstimatedState.msg
  LegCenterCommand.msg
  StanceWrenchCommand.msg
)

add_service_files(
  FILES
  SetFanSpeed.srv
)

generate_messages(
  DEPENDENCIES
  geometry_msgs
  sensor_msgs
  std_msgs
)

catkin_package(
  CATKIN_DEPENDS geometry_msgs message_runtime sensor_msgs std_msgs
)